# lzb-ai-hub

./: .gitignore  Makefile  README.md  docker-compose.yml
.claude/skills/lazboy-brand/: SKILL.md
.claude/skills/lazboy-brand/assets/logos/: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: github.ts
frontend/src/components/common/: Pagination.tsx  ScrollReveal.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/mcp/: McpCard.tsx  McpGrid.tsx
frontend/src/components/search/: FilterPanel.tsx  SearchBar.tsx
frontend/src/components/skills/: InstallInstructions.tsx  SkillCard.tsx  SkillGrid.tsx
frontend/src/components/tools/: ToolCard.tsx  ToolGrid.tsx
frontend/src/components/ui/: gradient-menu.tsx  text-roll.tsx  text-rotate.tsx
frontend/src/data/: mcp-servers.ts  tools.ts
frontend/src/hooks/: useCategories.ts  useSearch.ts  useSkills.ts
frontend/src/pages/: BrowsePage.tsx  HomePage.tsx  McpDetailPage.tsx  NotFoundPage.tsx  SkillDetailPage.tsx
frontend/src/types/: index.ts
